ft/src/tui/tests/snapshots/journal_entry_blocks_80x24.snap
---
source: ft/src/tui/tests/synthesis.rs
assertion_line: 918
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Gather  │  6 Tasks  │  7 Ti
┌ Gather — 2 sources (2 entries) ──────────────────────────────────────────────┐
│Sources (2)                                                                   │
│Foo (ghost), Bar (ghost)                                                      │
│● 2026-05-10  Alpha                                                           │
│    ↳ matched: Foo                                                            │
│Talk about [[Foo]].                                                           │
│                                                                              │
│  2026-05-10  Beta                                                            │
│    ↳ matched: Foo, Bar                                                       │
│Mention [[Foo]] and [[Bar]] together.                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Gather               not yet refreshed      mode: normal
