ft/src/tui/tests/snapshots/move_picker_80x24.snap
---
source: ft/src/tui/tests/tasks.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ query ───────────────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ tasks ───────────────────────────────────────────────────────────────────────┐
│ ── overdue (2)┌ find ────────────────────────────────────────┐               │
│▶   !!  Pay ren│type to search…                               │               │
│    !   Renew p└──────────────────────────────────────────────┘               │
│ ── upcoming (3┌ results ─────────────────────────────────────┐               │
│        Reply t│                type to search…               │               │
│    !!  Submit │                                              │  tomorrow     │
│    v   Buy bir│                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]   modal: task-move
