ft/src/tui/tests/snapshots/new_popup_blank_80x24.snap
---
source: ft/src/tui/tests/tasks.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ query ───────────────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ tasks ───────────────────────────────────────────────────────────────────────┐
│          ┌ new task ──────────────────────────────────────────────┐          │
│          │                                                        │          │
│          │  description : │                                       │          │
│          │       target :                                         │          │
│          │          due :                                         │          │
│          │    scheduled :                                         │          │
│          │     priority :                                         │          │
│          │         tags :                                         │          │
│          │   recurrence :                                         │          │
│          │                                                        │          │
│          │  Tab/Shift+Tab next · Ctrl+S save · Esc cancel         │          │
│          │                                                        │          │
│          │                                                        │          │
│          └────────────────────────────────────────────────────────┘          │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
