ft/src/tui/tests/snapshots/notes_create_filename_prompt_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  r     reslice synth section                                                 │
│  c     create note (blank)                                                   │
│  C     create ┌ create · 2/2 filename · . ───────────────────┐               │
│  t     open to│▏ filename: scrat█                            │               │
│  p     periodi│                                              │               │
│  ?     show th│ Enter commit   Esc back   Ctrl+W delete word │               │
│  Esc   close o│                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
