ft/src/tui/tests/snapshots/notes_create_var_prompt_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  r     reslice synth section                                                 │
│  c     create ┌ create · 4/4 vars · ./lunch.md · 1/1 ────────┐               │
│  C     create │▏ name = Sandw█                               │               │
│  t     open to│                                              │               │
│  p     periodi│                                              │               │
│  ?     show th│                                              │               │
│  Esc   close o│                                              │               │
│               │        Enter next   Esc cancel create        │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
